# github-activity-recap

./: .env.default  README.md  pyproject.toml
recap/: config.py  github_api.py  main.py
