[tool.poetry]
name = "git-recap"
version = "0.1.0"
description = "Summarize Git User Activity"
authors = ["David <git@dvdblk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
aiohttp = "^3.9.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
